ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: echo
 annotations:
   konghq.com/strip-path: 'true'
spec:
 ingressClassName: kong
 rules:
 - http:
     paths:
     - path: /echo
       pathType: ImplementationSpecific
       backend:
         service:
           name: echo
           port:
             number: 1027
